set(theme_QML_SOURCES
    AbstractButton.qml
    ActionGroup.qml
    Action.qml
    ApplicationWindow.qml
    BusyIndicator.qml
    ButtonGroup.qml
    Button.qml
    CheckBox.qml
    CheckDelegate.qml
    ComboBox.qml
    Container.qml
    Control.qml
    DelayButton.qml
    DialogButtonBox.qml
    Dialog.qml
    Dial.qml
    Drawer.qml
    Frame.qml
    GroupBox.qml
    ItemDelegate.qml
    Label.qml
    MenuBarItem.qml
    MenuBar.qml
    MenuItem.qml
    Menu.qml
    MenuSeparator.qml
    PageIndicator.qml
    Page.qml
    Pane.qml
    Popup.qml
    ProgressBar.qml
    RadioButton.qml
    RadioDelegate.qml
    RangeSlider.qml
    RoundButton.qml
    ScrollBar.qml
    ScrollIndicator.qml
    ScrollView.qml
    Slider.qml
    SpinBox.qml
    StackView.qml
    SwipeDelegate.qml
    SwipeView.qml
    SwitchDelegate.qml
    Switch.qml
    TabBar.qml
    TabButton.qml
    TextArea.qml
    TextField.qml
    ToolBar.qml
    ToolButton.qml
    ToolSeparator.qml
    ToolTip.qml
    Tumbler.qml
)

install(FILES ${theme_QML_SOURCES} DESTINATION ${SL_THEME_INSTALL_DIR})
